# FoxEngine

./: .gitignore  .gitmodules  CMakeLists.txt  Deps.lua  EngineCode.cpp  FoxEngine.sln  LICENSE  Makefile  SerializationEnode.cpp  app  config.json  main.cpp  premake5.lua  script.sh  test.cpp  usage.lua  world.json  xmake.lua
Fox/: CMakeLists.txt  premake5.lua  xmake.lua
Fox/Save for later/: AudioManager.hpp  FileWatcher.cpp  FileWatcher.hpp  StateMachine.cpp  SupportedFileFormat.hpp
Fox/Save for later/Plugin System (Not used)/: PluginLoader.cpp  PluginManager.hpp
Fox/graphics/: CMakeLists.txt
Fox/graphics/SDL2/: CMakeLists.txt
Fox/graphics/SFML/: CMakeLists.txt
Fox/include/: Application.hpp  Components.hpp  EntryPoint.hpp  FileWatcher.hpp  Font.hpp  FoxEngine.hpp  IApplication.hpp  IGraphic.hpp  ImGuiExtension.hpp  ImGuiVisitor.hpp  KeyCodes.hpp  Observer.hpp  Reflection.hpp  ResourceManager.hpp  Scene.hpp  SceneManager.hpp  SharedLib.hpp  SupportedFileFormat.hpp  Time.hpp  Utils.hpp  Vec2.hpp  api.hpp  bitsets.hpp  common.hpp  portable-file-dialogs.hpp
Fox/include/Animator/: Easing.hpp  Frame.hpp  Track.hpp
Fox/include/Components/: Animator.hpp  CameraComponent.hpp  Component.hpp  EntityName.hpp  NativeScript.hpp  ScriptableBehaviour.hpp  SpriteRenderer.hpp  Timeline.hpp  Transform.hpp
Fox/include/Core/: Application.hpp  Assert.hpp  AudioGroup.hpp  Base.hpp  Core.hpp  Delegate.hpp  EventNotifier.hpp  PluginLoader.hpp  Property.hpp  Scene.hpp  SceneSerializer.hpp  State.hpp  StateMachine.hpp  Window.hpp
Fox/include/Ecs/: ComponentArray.hpp  ComponentManager.hpp  EntityManager.hpp  Pipeline.hpp  World.hpp
Fox/include/EventSystem/: Delegate.hpp  EventSystem.hpp
Fox/include/Events/: ApplicationEvent.hpp  Event.hpp  KeyEvent.hpp  MouseEvent.hpp
Fox/include/FileSystem/: FPaths.hpp  Path.hpp
Fox/include/Input/: Input.hpp  MouseCodes.hpp
Fox/include/Math/: Math.hpp  Quat.hpp
Fox/include/Plugin/: IPlugin.hpp  PluginLoader.hpp  PluginManager.hpp
Fox/include/Reflection/: ReflectComponents.hpp
Fox/include/Renderer/: Buffer.hpp  Camera.hpp  EditorCamera.hpp  Framebuffer.hpp  Renderer.hpp  Renderer2D.hpp  RendererAPI.hpp  RendererCommand.hpp  Shader.hpp  Texture.hpp
Fox/include/Scene/: Scene.hpp  SceneCamera.hpp  SceneSerializer.hpp
Fox/include/Serialization/: ReflectionFromJson.hpp  ReflectionToJson.hpp
Fox/include/Utils/: DynamicArray.hpp  FileSystem.hpp  Graph.hpp  Quat.hpp  Time.hpp  Vec2.hpp  Vec3.hpp  bitsets.hpp
Fox/include/glm/: CMakeLists.txt
Fox/src/: Any.cpp  Application.cpp  CMakeLists.txt  EntryPoint.cpp  FPaths.cpp  FileSystem.cpp  Font.cpp  GraphicLibLoader.cpp  ImGuiExtension.cpp  Logger.cpp  Path.cpp  ReflectedComponents.cpp  Scene.cpp  SceneCamera.cpp  SceneManager.cpp  ScriptRegistry.cpp  SharedLib.cpp  State.cpp  StateMachine.cpp  Time.cpp  Tracks.cpp  World.cpp  bitsets.cpp
Fox/src/Animator/: Quat.cpp  Track.cpp  Vec3.cpp
Fox/src/Audio/: AudioGroup.cpp
Fox/src/Core/: Application.cpp  PluginLoader.cpp  Scene.cpp  SceneSerializer.cpp  State.cpp  Window.cpp
Fox/src/Ecs/: Entity.cpp  Pipeline.cpp  System.cpp  World.cpp
Fox/src/Event/: EventSystem.cpp
Fox/src/Fox/: Components.hpp  FoxEcs.hpp  FoxEngine.hpp  FoxSignalDefs.hpp  Hash.hpp  ImGuiExtension.cpp  Physics2D.cpp  Physics2D.hpp  ReflectedComponents.cpp  Reflection.hpp  SceneCamera.cpp  ScriptRegistry.cpp  SharedLib.hpp  Time.cpp  Utils.hpp  common.hpp
Fox/src/Math/: Math.cpp  Quat.cpp  Vec3.cpp
Fox/src/ReflectType/: ReflectComponents.cpp  ReflectMath.cpp
Fox/src/Renderer/: Buffer.cpp  EditorCamera.cpp  Framebuffer.cpp  GraphicsContext.cpp  OrthographicCameraController.cpp  Renderer.cpp  Renderer2D.cpp  RendererAPI.cpp  RendererCommand.cpp  Shader.cpp  SubTexture2D.cpp  Texture.cpp  VertexArray.cpp
Fox/src/Scene/: Scene.cpp  SceneSerializer.cpp
Fox/src/Serialization/: ReflectionFromJson.cpp  ReflectionToJson.cpp
Fox/src/Utils/: FileSystem.cpp  Path.cpp  PlatformUtils.cpp
FoxEditor/: CMakeLists.txt  EditorLayout.yaml  UserPreferences.yaml  editor_config.json  imgui.ini  mono_crash.0.0.json  mono_crash.0.1.json  mono_crash.0.2.json  premake5.lua  xmake.lua
FoxEditor/Resources/NewProjectTemplate/: Project.foxproj  premake5.lua
FoxEditor/SandboxProject/: Sandbox.csproj  Sandbox.foxproj  Sandbox.make  build.bat  build.sh  premake5.lua
FoxEditor/SandboxProject/Assets/: AssetRegistry.fxr  (+3 more)
FoxEditor/src/: EditorApp.cpp  EditorEvent.hpp  EditorIcons.cpp  EditorIcons.hpp  EditorLayer.cpp  EditorLayer.hpp  PanelManager.cpp  PanelManager.hpp  SignalDefs.hpp
FoxEditorRM/: CMakeLists.txt
FoxEditorRM/src/: PlatformExtensions.cpp  RendererExtensions.cpp  Shell.cpp  ShellFileInterface.cpp  main.cpp
Project/: CMakeLists.txt
Project/cmake/: Findfox_engine.cmake
editor/: CMakeLists.txt  fox_editor  imgui.ini  mono_crash.0.0.json  mono_crash.0.1.json  mono_crash.0.2.json  mono_crash.0.3.json  mono_crash.0.4.json  mono_crash.0.5.json  mono_crash.0.6.json  mono_crash.1f90b2924.0.json  mono_crash.1f90b2924.1.json  mono_crash.25d6fb287.0.json  mono_crash.25d6fb287.1.json  mono_crash.25d6fb287.2.json  xmake.lua
editor/include/: AnimationEditor.hpp  AnimatorEditor.hpp  ContentBrowserPanel.hpp  EditorApp.hpp  EditorEvent.hpp  EditorState.hpp  SandboxApp.hpp  SceneHierarchyPanel.hpp  Timeline_Lumix.hpp
editor/src/: AnimationEditor.cpp  AnimatorEditor.cpp  ContentBrowserPanel.cpp  EditorApp.cpp  EditorEvent.hpp  EditorLayer.cpp  EditorLayer.hpp  EditorState.cpp  EditorState.hpp  SceneHierarchyPanel.cpp  inspector.cpp  inspector_assets.cpp  inspector_primitives.cpp  inspectors.cpp
plugins/AnimatorPlugin/: CMakeLists.txt
plugins/GLFWPlugin/: CMakeLists.txt
plugins/OpenGLRendererPlugin/: CMakeLists.txt
sandbox/: CMakeLists.txt  imgui.ini  sandbox  xmake.lua
sandbox/assets/: animation.json
sandbox/include/: AnimationPlayerState.hpp  AnimatorState.hpp  Example2D.hpp  FirstTriangle.hpp  SandboxApp.hpp  SpriteSheet.hpp
sandbox/src/: Animator.cpp  CMakeLists.txt  EditorApp.cpp  Example2D.cpp  FirstTriangle.cpp  SandboxApp.cpp  SpriteSheet.cpp
src/: Any.cpp  (+15 more)
(+648 files in other folders)
